# rica-analysis

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  pyproject.toml  search.html  sitemap.xml
.github/workflows/: CHANGELOG.template  ci-static.yaml  ci-test.yaml
.utils/: README.md  main.py  pytest.sh
docs/: mkdocs.yml
docs/site/: 404.html  index.html  search.html
docs/site/about/: index.html
docs/site/search/: search_index.json
notebooks/: 00-Get-Data.ipynb  01-First-Explo.ipynb
rica-analysis/etl/: urls.py
rica_analysis/core/: __init__.py
rica_analysis/etl/: urls.py
tests/integration/: test_integration.py
tests/unit/: test_core.py  test_unit.py  test_urls.py
